# humanloop-cookbook

./: .env  .gitignore  README.md  dataset.jsonl  flow_metadata.py  main-explicit.py  main.py  pyproject.toml
assets/: conversations-a.json  conversations-b.json
assets/datasets/: dataset_with_common_customer_support_questions.csv  evaluate_agent_tutorial.jsonl
assets/evaluators/: count_trace_children.py  exact_match.py  levenshtein.py
deno-instrument-chat-agent/: README.md  package.json
deno-instrumented-chat-agent/: index.ts  package.json
node-evaluate-conversation/: package.json
node-evaluate-medqa/: README.md  callables.ts  mixed.ts  package.json  utilities.ts
node-evaluating-agent/: README.md  callables.ts  decorators.ts  levenshtein.ts  mixed.ts  package.json  prompt.txt
node-instrument-chat-agent/: README.md  index.decorators.ts  index.ts  package.json
node-instrumented-chat-agent/: README.md  index.decorators.ts  index.ts  package.json  tsconfig.json
python-instrument-chat-agent/: main.py  pyproject.toml
python/evaluate-rag/: .env  constants.py  main.py  pyproject.toml  requirements.txt  utilities.py
quickstarts/set-up-logging/: main-humanloop-flow.py  main-humanloop.py  main.py
ts-evaluating-agent/: callables.ts  decorators.ts  exact.match.ts  mixed.ts  package.json  prompt.txt
ts-instrumented-chat-agent/: index.ts  package.json
tutorials/: evaluate_chat.py  evaluate_queries_pipeline.py  evaluating_external_logs.ipynb
tutorials/decorators/: main.py  test.py
tutorials/rag/: agentic_rag.py  evaluate-rag-flow.ipynb  evaluate-rag.ipynb  (+1 more)
(+14 files in other folders)
